dijkstra-corrections-LBC